--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>simonoff/zsh-config-file @ GitHub</title>
+	<title>zsh-config-file @ GitHub</title>
 	
 	<style type="text/css">
 		body {
@@ -16,7 +16,7 @@
     }
     #container {
       margin: 0 auto;
-      width: 700px;
+      width: 800px;
     }
 		h1 { font-size: 3.8em; color: #9d9055; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
@@ -30,7 +30,22 @@
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
 	</style>
-	
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"> </script>
+	<script type="text/javascript" src="js/fancybox/jquery.fancybox-1.3.1.pack.js"> </script>
+	<link rel="stylesheet" href="js/fancybox/jquery.fancybox-1.3.1.css" type="text/css" media="screen" />
+	<script type="text/javascript">
+		$(document).ready(function() {
+
+			/* This is basic - uses default settings */
+
+			$("a.screenshots").fancybox({
+				'padding'	: 0,
+				'margin'	: 0,
+				'width'		: 1490,
+				'height'	: 724
+			});
+		});
+	</script>
 </head>
 
 <body>
@@ -46,16 +61,30 @@
     </div>
 
     <h1><a href="http://github.com/simonoff/zsh-config-file">zsh-config-file</a>
-      <span class="small">by <a href="http://github.com/simonoff">simonoff</a></span></h1>
+      <span class="small">by <a href="http://github.com/simonoff">simonoff</a>&<a href="http://github.com/daemon">daemon</a></span></h1>
 
     <div class="description">
-      improved zsh config file
+      improved zsh config file<br/>
+	  <a class="screenshots" rel="screenshots" href="imgs/devil_theme.png" title="simonoff's theme"><img src="imgs/rdevil_theme.png" alt=""/></a>
+	  <a class="screenshots" rel="screenshots" href="imgs/daemon_theme.png" title="daemon's theme"><img src="imgs/rdaemon_theme.png" alt=""/></a>
+	  <a class="screenshots" rel="screenshots" href="imgs/daemon_theme2.png" title="daemon's theme with git branch info"><img src="imgs/rdaemon_theme2.png" alt=""/></a>
+	  <a class="screenshots" rel="screenshots" href="imgs/completion1.png" title="git completion example"><img src="imgs/rcompletion1.png" alt=""/></a>
+	  <a class="screenshots" rel="screenshots" href="imgs/completion2.png" title="ssh completion example"><img src="imgs/rcompletion2.png" alt=""/></a>
+	  <a class="screenshots" rel="screenshots" href="imgs/completion3.png" title="MacOS X open -a completion example"><img src="imgs/rcompletion3.png" alt=""/></a>
+	  <a class="screenshots" rel="screenshots" href="imgs/completion4.png" title="cd completion example"><img src="imgs/rcompletion4.png" alt=""/></a>
+	  <a class="screenshots" rel="screenshots" href="imgs/inlinescript.png" title="inline shell script example"><img src="imgs/rinlinescript.png" alt=""/></a>
+	  
     </div>
 
     <h2>Authors</h2>
-<p>Alexander Simonov (alex@simonov.me)<br/>Dmitry Shaposhnik (dmitry@shaposhnik.name)<br/><br/>      </p>
+<p>Alexander Simonov (alex@simonov.me)
+<br/>Dmitry Shaposhnik (dmitry@shaposhnik.name)
+<br/></p>
 <h2>Contact</h2>
-<p>Alexander Simonov (alex@simonov.me)<br/>Dmitry Shaposhnik (dmitry@shaposhnik.name)<br/>      </p>
+<p>Alexander Simonov (alex@simonov.me)
+	<br/>Dmitry Shaposhnik (dmitry@shaposhnik.name)
+	<br/>
+</p>
 
 
     <h2>Download</h2>
